--- a/css/contato.css
+++ b/css/contato.css
@@ -1,85 +1,197 @@
 * {
-    font-family: "Poppins", sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body{
-    background: url(../img/aa.png);
-    background-repeat: no-repeat;
-    background-size: cover; 
-    background-position: center; 
+  background: #76bcef;
 }
+
 .nav {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
-    padding: 1.5rem 6rem;
-  }
-  .logo {
-    display: flex;
-    align-items: center;
-    margin-top: -2rem;
-    margin-left: 5%;
-    padding: 0.5rem;
-  }
-  
-  .nav a::after {
-    content: "";
-    width: 0;
-    height: 3px;
-    background-color: rgb(0, 0, 0);
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-    transition: 0.5s ease-in-out;
-  }
-  
-  .nav a:hover::after {
-    width: 100%;
-  }
-  
-  .nav a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    padding: 0 10px;
-    position: relative;
-    font-size: 20px;
-  }
-  
-  .logo h1 {
-    color: rgb(146, 146, 146);
-  }
-  .nav-list {
-    display: flex;
-    align-items: center;
-    margin-top: -15px;
-  }
-  .nav-list ul {
-    display: flex;
-    list-style: none;
-  }
-  .item {
-    margin: 0 15px;
-  }
-
-  form .enviar input{
-    background: #000000;
-    color: white;
-    width: 37rem;
-  }
-
-  .formulario{
-    margin-top: 6rem;
-  }
-section.formulario{
-    padding: 80px 4%;
-    background: white;
-    border-radius: 10px;
-    flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+  margin: 0;
+  padding: 0; 
+  position: relative;
+  gap: 16px;
+  flex-wrap: wrap;
 }
+
+.logo img {
+  max-width: 250px;
+}
+
+nav li {
+  margin: 0 15px;
+  list-style-type: none;
+}
+
+.nav a::after {
+  content: "";
+  width: 0;
+  height: 3px;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  transition: 0.5s ease-in-out;
+}
+
+.nav a:hover::after {
+  width: 100%;
+}
+
+.nav a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+  padding: 0 10px;
+  position: relative;
+  font-size: 20px;
+}
+
+.nav-list {
+  display: flex;
+  gap: 16px;
+  list-style: none;
+  flex-wrap: wrap; 
+}
+
+
+.input-group {
+  display: flex; 
+  align-items: center; 
+  background-color: #fafafa; 
+  padding: 10px;
+  border-radius: 54px;
+  gap: 8px;
+  flex: 1; 
+  max-width: 50px;
+  min-width: 950px;
+  
+}
+
+.input-field {
+  flex: 1; 
+  border: none;
+  background-color: transparent;
+  font-size: 16px; 
+}
+
+.input-field:focus {
+  outline: none; 
+}
+
+.input-icon {
+    width: 32px; 
+    height: 32px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    color: #ffffff; 
+    background: #76bcef;
+}
+
+
+.items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 42px;
+  list-style: none;
+  margin-top: 12px;
+  background: #fafafa;
+  border-radius: 24px;
+  padding: 14px;
+  width: 950px;
+  height: 621px;
+  overflow-y: auto;
+  position: absolute; 
+  z-index: 100;
+}
+
+
+.item-imagem img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
 h1{
-    font-size: 5rem;
+  color: #044cb9;
+}
+.informacoes h2{
+  color: white;
+}
+.informacoes{
+  position: absolute;
+  top: 40px; 
+  left: 0%; 
+  transform: translateX(-50%); 
+  border: none;
+  background-color: #2002a1;
+  width: 450px;
+  height: 550px;
+  display: flex;
+  z-index: 2; 
+  cursor: pointer;
+  box-shadow: 0 14px 25px rgba(0, 0, 0, 0.2);
+  padding: 20px 30px; 
+  flex-direction: column;
+}
+.informacoes h2 {
+  font-size: 22px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+
+
+.info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.info i {
+  font-size: 20px;
+  margin-right: 10px;
+  color: #ffffff;
+}
+
+.info div {
+  display: flex;
+  flex-direction: column;
+}
+
+.info div span {
+  font-weight: bold;
+  font-size: 18px; 
+  margin-bottom: 5px;
+  color: white;
+}
+
+.info div p {
+  margin: 0;
+  font-size: 16px;
+  color: #dddddd; 
+}
+
+
+.todo-contato {
+  background: white;
+  width: 1000px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -40%);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 form{
   max-width: 500px;
@@ -89,28 +201,25 @@ form{
   flex-direction: column;
   padding: 2rem;
   margin-top: 30px;
+  margin-left: 60px;
 }
 form input{
-    width: 100%;
     border: 0;
     outline: 0;
     padding: 20px 15px;
     color: black;
     font-size: 18px;
     padding: 2rem ;
-
-
+    background: #f1f1f1;
+    border-radius: 10px;
+    width: 560px;
 }
-input[type="text"], input[type="email"], textarea {
-    border-bottom: 1px solid #ccc;
-
-}
-textarea:focus {
-    outline: none; 
+#search::placeholder {
+  color: #76bcef; 
 }
 input::placeholder,
 textarea::placeholder {
-    color: #000000; 
+    color: #929292; 
     opacity: 1; 
 }
 form input, form textarea{
@@ -118,69 +227,29 @@ form input, form textarea{
 }
 form textarea{
     resize: none;
+    outline: 0;
     width: 560px;
+    height: 200px;
     border: none;
-    border-bottom: 1px solid #ccc;
-    background: #ffffff;
+    background: #f1f1f1;
     font-size: 18px;
-    padding: 1rem 
+    padding: 1rem; 
+    border-radius: 10px;
 }
-.fale {
-  height: 100%;
-  width: 800px;
-    background: rgb(0, 0, 0);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 9rem;
-}
-.info{
-    margin-bottom: 60px; 
-    margin-right: 20px; 
-
-}
-.info a{
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-}
-.info p{
-    margin-top: 1.5rem;
-}
-.info i, span{
-    font-size: 20px;
-    
+.enviar input[type="submit"] {
+  background-color: #00aeff; 
+  color: white; 
+  padding: 15px; 
+  border: none; 
+  border-radius: 50px; 
+  font-size: 16px; 
+  cursor: pointer; 
+  width: 150px; 
+  transition: background-color 0.3s ease; 
+  text-align: center; 
+  box-shadow: 0 0 20px #0072ff;
 }
 
-
-.redes p{
-    font-size: 15px;
+.enviar input[type="submit"]:hover {
+  background-color: #0066ff; 
 }
-.redes{
-    margin: 2rem;
-}
-.redes h2{
-    font-size: 3rem;
-    color: rgb(255, 255, 255);
-    margin-bottom: 1.5rem;
-}
-
-.todo-contato{
-  display: flex;
-  justify-content: center; 
-  align-items: flex-start; 
-  padding: 0 9rem;
-}
-
-
-
-  .atendimento div {
-    display: flex;
-    gap: 20px;
-  }
-  .atendimento div a {
-    margin-top: 22px;
-  }
-  .atendimento p {
-    cursor: pointer;
-  } 
