--- a/css/index.css
+++ b/css/index.css
@@ -11,21 +11,23 @@ html {
 .nav {
   display: flex;
   justify-content: space-between;
-  margin-top: 2rem;
-  padding: 1.5rem 6rem;
+  align-items: center; 
+  margin: 0;
+  padding: 0; 
+  position: relative;
+  gap: 16px;
+  flex-wrap: wrap;
   background-color: rgba(255, 255, 255, 0.5);
 }
-.logo {
-  display: flex;
-  align-items: center;
-  margin-top: -2rem;
-  margin-left: 5%;
-  padding: 0.5rem;
+
+.logo img {
+  max-width: 250px;
 }
-nav li{
+nav li {
   margin: 0 15px;
   list-style-type: none;
 }
+
 .nav a::after {
   content: "";
   width: 0;
@@ -49,41 +51,223 @@ nav li{
   font-size: 20px;
 }
 
-.logo h1 {
-  color: rgb(146, 146, 146);
-}
 .nav-list {
   display: flex;
-  align-items: center;
-  margin-top: -15px;
+  gap: 16px;
+  list-style: none;
+  flex-wrap: wrap; 
 }
-.nav-list ul {
+
+
+.input-group {
+  display: flex; 
+  align-items: center; 
+  background-color: #fafafa; 
+  padding: 10px;
+  border-radius: 54px;
+  gap: 8px;
+  flex: 1; 
+  max-width: 50px;
+  min-width: 950px;
+  
+}
+
+.input-field {
+  flex: 1; 
+  border: none;
+  background-color: transparent;
+  font-size: 16px; 
+}
+
+.input-field:focus {
+  outline: none; 
+}
+
+.input-icon {
+    width: 32px; 
+    height: 32px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    color: rgb(0, 0, 0); 
+}
+
+
+.items {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 42px;
+  list-style: none;
+  margin-top: 12px;
+  background: #fafafa;
+  border-radius: 24px;
+  padding: 14px;
+  width: 950px;
+  height: 621px;
+  overflow-y: auto;
+  position: absolute; 
+  z-index: 100;
+}
+
+
+.item-imagem img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+.carousel-control-prev, .carousel-control-next {
+  border: none; 
+  padding: 10px; 
+}
+.grid{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  max-width: 800px;
+  padding: 10px;
   justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.grid2{
+  width: 500px;
+  height: 400px;
+}
+
+.grid1{
+  height: 840px;
+  width: 700px;
+}
+.grid-item:nth-child(1){
+ grid-row: 1/4;
+}
+.grid-item{
+  display: grid;
+}
+.grid-item img{
+  grid-column: 1;
+  grid-row: 1/3;
+  align-self: end;
+  margin: 0 auto;
+}
+.grid-item p{
+  padding: 10px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  grid-column: 1;
+  grid-row: 2;
+  align-self: end;
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+  border: 1px solid rgb(194, 193, 193);
+  border-radius: 50%;
+  width: 20px;  
+  height: 30px; 
+  padding: 25px; 
+  
+}
+
+.card-lista .card-item .card-link{
+  width: 400px;
+  background: #f1f1f1;
+  padding: 18px;
+  border-radius: 12px;
+  display: block;
+  text-decoration: none;
+  border: 2px solid transparent;
+  box-shadow: 0 10px 10px rgba(0,0,0, 0.05);
+  transition: 0.2s ease;
+}
+.card-lista .card-item .card-link:hover{
+border-color: #5372f0;
+}
+.card-lista .card-item{
   list-style: none;
 }
-
-
-.caption {
-  position: absolute;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: white;
-  font-size: 24px;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 10px;
-  border-radius: 5px;
-  text-align: center;
-}
-
-.dots {
-  text-align: center;
-  position: absolute;
-  bottom: 10px;
+.card-lista  .card-link .card-imagem{
   width: 100%;
+  object-fit: cover;
+  border-radius: 50px;
+}
+.card-lista .card-link .item{
+  color: #5372f0;
+  padding: 8px 16px;
+  font-size: 0.95rem;
+  font-weight: 500;
+  margin: 16px  0 18px;
+  background: #DDE4FF;
+  width: fit-content;
+  border-radius: 50px;
+}
+.card-titulo .card-link .lista{
+  font-size: 1.19rem;
+  color: black;
+  font-weight: 600;
+}
+.card-lista .card-link .card-button{
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  margin: 30px 0 5px;
+  border: 2px solid #5372f0;
+  background: none;
+  cursor: pointer;
+  color: #5372f0;
+  transform: rotate(-45deg);
+}
+.card-lista .card-link:hover .card-button {
+color: white;   
+background: #5372f0;
+}
+.card-lista {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+  justify-items: center;
 }
 
+
+.item-title {
+  font-size: 22px;
+  color: #333;
+}
+
+.item-description {
+  font-size: 16px;
+  color: #666;
+}
+
+.categorias img{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0 20px;
+}
+.categorias{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.categorias {
+  margin-top: 0px;
+}
+.categorias p{
+  justify-content: center;
+  display: flex;
+}
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: rgb(61, 60, 60);
+}
 .dot {
   cursor: pointer;
   height: 15px;
