--- a/css/produtos.css
+++ b/css/produtos.css
@@ -6,25 +6,27 @@
   html {
     scroll-behavior: smooth;
   }
-  
-.nav {
+ 
+  .nav {
     display: flex;
     justify-content: space-between;
-    margin-top: 2rem;
-    padding: 1.5rem 6rem;
+    align-items: center; 
+    margin: 0;
+    padding: 0; 
+    position: relative;
+    gap: 16px;
+    flex-wrap: wrap;
     background-color: rgba(255, 255, 255, 0.5);
   }
-  .logo {
-    display: flex;
-    align-items: center;
-    margin-top: -2rem;
-    margin-left: 5%;
-    padding: 0.5rem;
+  
+  .logo img {
+    max-width: 250px;
   }
-  nav li{
+  nav li {
     margin: 0 15px;
     list-style-type: none;
   }
+  
   .nav a::after {
     content: "";
     width: 0;
@@ -48,18 +50,11 @@
     font-size: 20px;
   }
   
-  .logo h1 {
-    color: rgb(146, 146, 146);
-  }
   .nav-list {
     display: flex;
-    align-items: center;
-    margin-top: -15px;
-  }
-  .nav-list ul {
-    display: flex;
-    justify-content: center;
+    gap: 16px;
     list-style: none;
+    flex-wrap: wrap; 
   }
   
 .card-lista .card-item .card-link{
@@ -135,6 +130,40 @@
         width: 200px;
         margin-right: 40px; 
 }
+.input-group {
+  display: flex; 
+  align-items: center; 
+  background-color: #fafafa; 
+  padding: 10px;
+  border-radius: 54px;
+  gap: 8px;
+  flex: 1; 
+  max-width: 50px;
+  min-width: 950px;
+  
+}
+
+.input-field {
+  flex: 1; 
+  border: none;
+  background-color: transparent;
+  font-size: 16px; 
+}
+
+.input-field:focus {
+  outline: none; 
+}
+
+.input-icon {
+    width: 32px; 
+    height: 32px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    color: rgb(0, 0, 0); 
+}
+
 
 .container {
     flex: 1;
@@ -179,7 +208,7 @@
   padding: 20px 30px;
   font-size: 16px;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   background-color: #ffffff;
   color: rgb(0, 0, 0);
   border: 2px solid black;
