--- a/css/index.css
+++ b/css/index.css
@@ -1,486 +1,39 @@
-* {
-  padding: 0;
+body {
   margin: 0;
-  font-family: "Poppins", sans-serif;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; 
-  margin: 0;
-  padding: 0; 
-  position: relative;
-  gap: 16px;
-  flex-wrap: wrap;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-.logo img {
-  max-width: 250px;
-}
-nav li {
-  margin: 0 15px;
-  list-style-type: none;
-}
-
-.nav a::after {
-  content: "";
-  width: 0;
-  height: 3px;
-  background-color: rgb(133, 133, 133);
-  position: absolute;
-  bottom: -10px;
-  left: 0;
-  transition: 0.5s ease-in-out;
-}
-
-.nav a:hover::after {
-  width: 100%;
-}
-
-.nav a {
-  text-decoration: none;
-  color: rgb(145, 145, 145);
-  padding: 0 10px;
-  position: relative;
-  font-size: 20px;
-}
-
-.nav-list {
-  display: flex;
-  gap: 16px;
-  list-style: none;
-  flex-wrap: wrap; 
-}
-
-
-.input-group {
-  display: flex; 
-  align-items: center; 
-  background-color: #fafafa; 
-  padding: 10px;
-  border-radius: 54px;
-  gap: 8px;
-  flex: 1; 
-  max-width: 50px;
-  min-width: 950px;
-  
-}
-
-.input-field {
-  flex: 1; 
-  border: none;
-  background-color: transparent;
-  font-size: 16px; 
-}
-
-.input-field:focus {
-  outline: none; 
-}
-
-.input-icon {
-    width: 32px; 
-    height: 32px; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100%;
-    color: rgb(0, 0, 0); 
-}
-
-
-.items {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 42px;
-  list-style: none;
-  margin-top: 12px;
-  background: #fafafa;
-  border-radius: 24px;
-  padding: 14px;
-  width: 950px;
-  height: 621px;
-  overflow-y: auto;
-  position: absolute; 
-  z-index: 100;
-}
-
-
-.item-imagem img {
-  width: 120px;
-  height: 120px;
-  object-fit: cover;
-  border-radius: 8px;
-}
-.carousel-control-prev, .carousel-control-next {
-  border: none; 
-  padding: 10px; 
-}
-.grid{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-  max-width: 800px;
-  padding: 10px;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-.grid2{
-  width: 500px;
-  height: 400px;
-}
-
-.grid1{
-  height: 840px;
-  width: 700px;
-}
-.grid-item:nth-child(1){
- grid-row: 1/4;
-}
-.grid-item{
-  display: grid;
-}
-.grid-item img{
-  grid-column: 1;
-  grid-row: 1/3;
-  align-self: end;
-  margin: 0 auto;
-}
-.grid-item p{
-  padding: 10px;
-  font-weight: bold;
-  color: white;
-  grid-column: 1;
-  grid-row: 2;
-  font-size: 20px;
-  align-self: end;
-}
-
-.carousel-control-prev-icon, .carousel-control-next-icon {
-  border: 1px solid rgb(194, 193, 193);
-  border-radius: 50%;
-  width: 20px;  
-  height: 30px; 
-  padding: 25px; 
-  
-}
-
-.card-lista .card-item .card-link{
-  width: 400px;
-  background: #f1f1f1;
-  padding: 18px;
-  border-radius: 12px;
-  display: block;
-  text-decoration: none;
-  border: 2px solid transparent;
-  box-shadow: 0 10px 10px rgba(0,0,0, 0.05);
-  transition: 0.2s ease;
-}
-.card-lista .card-item .card-link:hover{
-border-color: #5372f0;
-}
-.card-lista .card-item{
-  list-style: none;
-}
-.card-lista  .card-link .card-imagem{
-  width: 100%;
-  object-fit: cover;
-  border-radius: 50px;
-}
-.card-lista .card-link .item{
-  color: #5372f0;
-  padding: 8px 16px;
-  font-size: 0.95rem;
-  font-weight: 500;
-  margin: 16px  0 18px;
-  background: #DDE4FF;
-  width: fit-content;
-  border-radius: 50px;
-}
-.card-titulo .card-link .lista{
-  font-size: 1.19rem;
-  color: black;
-  font-weight: 600;
-}
-.card-lista .card-link .card-button{
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-  margin: 30px 0 5px;
-  border: 2px solid #5372f0;
-  background: none;
-  cursor: pointer;
-  color: #5372f0;
-  transform: rotate(-45deg);
-}
-.card-lista .card-link:hover .card-button {
-color: white;   
-background: #5372f0;
-}
-.card-lista {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 40px;
-  justify-items: center;
-}
-
-
-.item-title {
-  font-size: 22px;
-  color: #333;
-}
-
-.item-description {
-  font-size: 16px;
-  color: #666;
-}
-
-.categorias img{
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin: 0 20px;
-}
-.categorias{
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
-}
-
-.categorias {
-  margin-top: 0px;
-}
-.categorias p{
-  justify-content: center;
-  display: flex;
-}
-::-webkit-scrollbar{
-  width: 10px;
-}
-
-::-webkit-scrollbar-thumb{
-  background-color: rgb(61, 60, 60);
-}
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 5px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.3s ease;
-}
-
-.active,
-.dot:hover {
-  background-color: #717171;
-}
-
-.active-slide {
-  display: block;
-}
-
-.primeiro {
-  display: flex;
   align-items: center;
-  padding: 2rem;
-  justify-content: space-between;
-}
-
-.primeiro a {
-  text-decoration: none;
-  display: inline-block;
-  background: #000;
-  color: #fff;
-  padding: 0.8rem 1.8rem;
-  border-radius: 40px;
-  margin-top: 2rem;
-  cursor: pointer;
-}
-.segundo {
-  padding: 10rem;
-}
-.segundo h2 {
-  font-size: 45px;
-}
-.primeiro video {
-  width: 1000px;
-  margin: 4rem;
-}
-
-
- .imagens{
-  display: flex;
-  justify-content: space-around;
- }
- .proporcional-container {
-  display: flex;
-  justify-content: center; 
-  gap: 40px; 
-  padding: 40px;
-  background-color: #ffffff;
-  border-radius: 10px;
-}
-
-.texto {
-  flex: 1;
-  max-width: 500px; 
-}
-
-.texto h2 {
-  font-size: 3em;
-  color: #000;
-  margin-bottom: 10px;
-}
-
-.texto h2 span {
-  color: #0056b3;
-}
-
-.texto p {
-  font-size: 1.3em;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.ver-mais {
-  background-color: #000;
-  color: #fff;
-  padding: 20px 30px;
-  border: none;
-  border-radius: 70px;
-  font-size: 1em;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.ver-mais:hover {
-  background-color: #333;
-}
-
-.icones-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); 
-  gap: 10px; 
-  align-items: center;
-  justify-items: center; 
-}
- .icones-grid .icone:hover{
-  border: orange solid 2px;
-  color: orange;
-  transition: 0.3s;
-}
-
-.icone {
+  height: 100vh;
   background-color: #fff;
-  border-radius: 10px;
-  padding: 30px; 
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  font-size: 1.2em; 
+  overflow: hidden;
 }
 
-.icone i {
-  max-width: 60px; 
-  margin-bottom: 30px;
-}
-
-.icone p {
-  font-size: 1.1em;
-  color: #333;
-  font-weight: bold;
-}
-footer {
-  display: flex;
-  justify-content: space-around; 
-  align-items: center;
-  background-color: #000;
-  height: 370px;
-  width: 100vw; 
-  margin: 0; 
-  padding: 20px 0; 
-  box-sizing: border-box;
-  position: relative; 
-}
-
-footer div {
-  display: grid;
-  justify-items: center;
-  color: #fff;
-}
-
-footer div h1 {
-  margin-bottom: 10px;
-}
-
-footer div p,
-footer div a {
-  margin-bottom: 8px;
-  color: white;
-  text-decoration: none;
-}
-
-footer img {
-  max-width: 600px;
-  border-radius: 2px;
-}
-
-footer button {
-  position: absolute;
-  top: -30px; 
-  left: 50%; 
-  transform: translateX(-50%); 
-  border: none;
-  background-color: #e7e7e7;
+.logo {
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10; 
-  cursor: pointer;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); 
+  animation: scaleRotate 3s ease-in-out forwards;
 }
 
-footer button img {
-  width: 24px;
-  height: 24px;
-  padding: 0;
+.logo::before {
+  content: '';
+  width: 60%;
+  height: 60%;
+  background-color: white;
+  border-radius: 50%;
 }
 
-
-
-
-@media (max-width: 768px) {
-  footer {
-    flex-direction: column; 
-    height: auto; 
-    padding: 30px;
+@keyframes scaleRotate {
+  0% {
+    transform: scale(0) ;
   }
-
-  footer img {
-    max-width: 100%; 
-    margin: 20px 0;
+  50% {
+    transform: scale(1.5) ;
   }
-
-  footer button {
-    top: -25px; 
-    width: 40px;
-    height: 40px;
-  }
-
-  footer button img {
-    width: 20px;
-    height: 20px;
+  100% {
+    transform: scale(1) ;
   }
 }
