--- a/css/sobre.css
+++ b/css/sobre.css
@@ -86,6 +86,52 @@ nav li {
 }
 
 .input-icon {
+    width: 32px; 
+    height: 32px; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    color: rgb(0, 0, 0); 
+}
+  .item{
+    display: flex; 
+    align-items: center; 
+    gap: 16px;
+    border-radius: 8px; 
+    padding: 12px; 
+    width: 100%; 
+  }
+.item:hover{
+  background: rgb(224, 224, 224);
+}
+.items {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 42px;
+  list-style: none;
+  margin-top: 12px;
+  background: #fafafa;
+  border-radius: 24px;
+  padding: 14px;
+  width: 950px;
+  height: 621px;
+  overflow-y: auto;
+  position: absolute; 
+  z-index: 100;
+}
+
+
+.item-imagem img {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+
+.input-icon {
   width: 32px; 
   height: 32px; 
   display: flex;
@@ -111,7 +157,7 @@ nav li {
 .texto img {
   width: 550px;
   margin-left: 30px;
-  z-index: 200;
+  z-index: 1;
 }
 
 .texto::after {
