--- a/css/produtos.css
+++ b/css/produtos.css
@@ -240,24 +240,24 @@
 }
 
 .page-button {
-  padding: 20px 30px;
+  padding: 20px 25px;
   font-size: 16px;
   border: none;
-  border-radius: 5px;
+  border-radius: 50px;
   background-color: #ffffff;
   color: rgb(0, 0, 0);
-  border: 2px solid black;
+  border: 1px solid rgb(175, 175, 175);
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 .page-button.active {
-  background-color: #dadada;
+  background-color:rgb(153, 0, 255);
+  color: rgb(255, 255, 255);
+  border: none;
 }
 
-.page-button:hover {
-  background-color: #dadada;
-}
+
 footer {
   display: flex;
   justify-content: space-around; 
