--- a/css/contato.css
+++ b/css/contato.css
@@ -68,18 +68,14 @@ a{
   background-color: #fafafa; 
   padding: 10px;
   border-radius: 54px;
-  gap: 8px;
   flex: 1; 
-  max-width: 400px;
-  min-width: 950px;
-  
+  gap: 8px;
+  width: 1100px; 
+  max-width: 600px; 
+  margin: 0 auto;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
-.item-title{
-  color: black;
-}
-.item-subtitle, .item-description{
-  color: #8b8b8b;
-}
+
 .input-field {
   flex: 1; 
   border: none;
@@ -91,7 +87,6 @@ a{
   outline: none; 
 }
 
-
 .input-icon {
     width: 32px; 
     height: 32px; 
@@ -99,44 +94,70 @@ a{
     align-items: center;
     justify-content: center;
     border-radius: 100%;
-    color: #ffffff; 
-    background: #76bcef;
+    color: rgb(0, 0, 0); 
 }
-
-.item{
-  display: flex; 
-  align-items: center; 
-  gap: 16px;
-  border-radius: 8px; 
-  padding: 12px; 
-  width: 100%; 
-}
+  .item{
+    display: flex; 
+    align-items: center; 
+    gap: 16px;
+    border-radius: 8px; 
+    padding: 12px; 
+    width: 100%; 
+  }
 .item:hover{
-background: rgb(224, 224, 224);
+  background: rgb(224, 224, 224);
 }
 .items {
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 42px;
-list-style: none;
-margin-top: 12px;
-background: #fafafa;
-border-radius: 24px;
-padding: 14px;
-width: 950px;
-height: 621px;
-overflow-y: auto;
-position: absolute; 
-z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 42px;
+  list-style: none;
+  margin-top: 12px;
+  background: #fafafa;
+  border-radius: 24px;
+  padding: 14px;
+  width: 950px;
+  height: 621px;
+  overflow-y: auto;
+  position: absolute; 
+  z-index: 100;
 }
 
 
 .item-imagem img {
-width: 120px;
-height: 120px;
-object-fit: cover;
-border-radius: 8px;
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+
+.input-icon {
+  width: 32px; 
+  height: 32px; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  color: #ffffff; 
+  background: #0f1357;
+}
+
+
+.texto {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  margin-top: 80px;
+  gap: 300px;
+}
+
+.texto img {
+  width: 550px;
+  margin-left: 30px;
+  z-index: 1;
 }
 h1{
   color: #044cb9;
